# tl

./: .gitignore  Cargo.toml  LICENSE  README.md  README_JP.md  analyze_leaks.py  analyze_mem_log.py  analyze_mem_trace.py  build.rs  dump.ll  error_log.txt  ir.ll  list_keys.tl  model.safetensors  model_2digit.safetensors  output.dump  output.txt  output_backtrace.txt  output_debug.dump  output_debug.txt  output_final.txt  output_fixed.txt  output_i64.dump  output_manual.txt  package-lock.json  parse_debug  parse_debug.rs  repro_arg_struct.tl  repro_attention.tl  repro_attention_body1.tl  repro_attention_body2.tl  repro_attention_body3.tl  repro_attention_from_map.tl  repro_attention_sig.tl  repro_crash.tl  repro_impls.tl  repro_linear.tl  repro_mlp.tl  repro_narrow.tl  repro_rope_only.tl  (+33 more)
.agent/: DESIGN_PRINCIPLES.md
.agent/workflows/: debug-memory-leak.md  debug-segfault.md
.cargo/: config.toml
Papers/: tensor_logic_spec.md
Papers/実装/: ast_design.md  implementation_sequence.md  tensorlogic_grammar.md
crates/tl_backend/: Cargo.toml
crates/tl_cpu/: Cargo.toml
crates/tl_cuda/: Cargo.toml  build.rs
crates/tl_cuda/src/: backend_impl.rs  buffer_pool.rs  cuda_sys.rs  device.rs  device_impl.rs  ffi.rs  ffi_ops.rs  graph.rs  lib.rs  optim.rs  stream.rs  tensor.rs
crates/tl_cuda/src/autograd/: mod.rs  ops.rs
crates/tl_cuda/src/cuda_kernels/: autograd.cu
crates/tl_cuda/src/ops/: activation.rs  binary.rs  broadcast.rs  fused.rs  index.rs  llm.rs  loss.rs  matmul.rs  nn.rs  quantized.rs  reduce.rs  reduce_axis.rs  scalar.rs  shape.rs  special.rs  unary.rs
crates/tl_cuda/tests/: activation_test.rs  addition_divergence_test.rs  autograd_comprehensive_test.rs  autograd_ops_test.rs  basic_ops_test.rs  comprehensive_test.rs  cuda_shader_test.rs  extended_ops_test.rs  ffi_memory_test.rs  inplace_ops_test.rs  matmul_special_test.rs  new_ops_comprehensive_test.rs  nn_llm_test.rs  quantized_test.rs  reduce_shape_test.rs  tensor_core_test.rs  test_accum_bug.rs
crates/tl_metal/: Cargo.toml
crates/tl_metal/examples/: autograd_test.rs  basic_test.rs  debug_add.rs  gpu_test.rs  graph_capture_replay.rs  matmul_test.rs  perf_test.rs  phase1_test.rs  phase2_test.rs  phase4_test.rs
crates/tl_metal/src/: backend_impl.rs  buffer_pool.rs  command_stream.rs  device.rs  device_impl.rs  ffi.rs  ffi_ops.rs  graph.rs  lib.rs  optim.rs  tensor.rs
crates/tl_metal/src/autograd/: mod.rs  ops.rs  var_ops.rs
crates/tl_metal/src/fusion/: cache.rs  codegen.rs  mod.rs
crates/tl_metal/src/ops/: activation.rs  binary.rs  broadcast.rs  fused.rs  index.rs  llm.rs  matmul.rs  mod.rs  mps.rs  nn.rs  nn_shaders.rs  quantized.rs  reduce.rs  reduce_axis.rs  scalar.rs  shape.rs  special.rs  unary.rs
crates/tl_metal/src/shaders/: mod.rs
crates/tl_metal/tests/: autograd_ops_test.rs  comprehensive_test.rs  cross_entropy_backward_test.rs  extended_ops_test.rs  fused_ops_test.rs  fusion_test.rs  gpu_builtins_test.rs  graph_test.rs  inplace_ops_test.rs  memleak_test.rs  metal_shader_test.rs  quantized_test.rs  tensor_core_test.rs
crates/tl_runtime/: Cargo.toml  README.md  build.rs
crates/tl_runtime/src/: arena.rs  args.rs  atomic_ffi.rs  autograd_registry.rs  channel_ffi.rs  checkpoint.rs  context.rs  cuda_ext.rs  data_ffi.rs  device.rs  device_ffi.rs  error.rs  executor_ffi.rs  file_io.rs  gguf.rs  gpu_dispatch.rs  hashmap.rs  image_ffi.rs  knowledge_base.rs  lib.rs  llm.rs  logic.rs  math_ffi.rs  memory_ffi.rs  memory_manager.rs  memory_manager.rs.bak  memory_manager.rs.bak2  memory_manager_stub.rs  metal_bridge.rs  mutex_ffi.rs  net_ffi.rs  print_ffi.rs  quantized.rs  regex_ffi.rs  registry.rs  stdlib.rs  string_ffi.rs  system.rs  system.rs.bak  tensor_map.rs  (+6 more)
crates/tl_runtime/src/cuda_kernels/: activation.cu
crates/tl_runtime/tests/: gguf_test.rs
debug/: logic_syntax_test.tl
debug/multi_file/: facts.tl  main.tl
docs/: MEMORY_MANAGEMENT_STRATEGY.md  MEMORY_MANAGER.md  design_notes.md  functions_and_types.md  global_functions.md  logic_programming.md  memory_manager_api.md  tensor_comprehension.md  tensor_comprehension_design.md  tensor_comprehension_jp.md  tensor_logic_advantages.md
docs/ar/: README.md  logic_programming.md  tensor_comprehension.md  tensor_comprehension_design.md  (+2 more)
examples/: adam_wip.tl  autograd_test.tl  benchmark.tl  block_scope_test.tl  codegen_test.tl  debug_gpt.tl  debug_gpt_2.tl  debug_impl.tl  debug_struct.tl  debug_structure.tl  enum_code_gen_test.tl  fn_call_test.tl  gpu_test.tl  hello.tl  hybrid_test.tl  ifexpr_test.tl  infer_add.tl  infer_heavy.tl  leak_test.tl  literal.tl  logic_test.tl  matmul.tl  matmul_eq.tl  minimal_debug.tl  parser_v2.tl  path_test.tl  phase2_test.tl  print_fmt_test.tl  readme_n_queens.tl  readme_spatial.tl  repro_array.tl  repro_complex.tl  repro_crash.tl  repro_crash_array.tl  repro_index.tl  reverse_infer.tl  reverse_train.tl  sgd_test.tl  slice_test.tl  struct_test.tl  (+28 more)
scripts/: check_arc_type_safety.py  check_ffi_signatures.py  check_ffi_type_safety.py  refactor_implicit_return.py  refactor_implicit_returns.py  refactor_implicit_returns_v2.py  verify_tl_files.py  verify_training_pipeline.py
src/: main.rs
tests/: char_comprehensive.tl  check_missing_funcs.rs  compound_assign_test.tl  cuda_grad_dummy_test.tl  cuda_sync_test.rs  debug_memleak.tl  debug_vocab_size.tl  generics.tl  hello.tl  integration.rs  kv_cache_comprehensive.tl  kv_cache_test.rs  match_scrutinee.tl  mem_leak_test.tl  mem_minimal.tl  mem_v2_test.tl  mono_comprehensive.tl  monomorphize_test.rs  overload_test.tl  parser_test.rs  patterns.rs  regress_double_free.tl  regress_logic_var.tl  regression_double_mangle.tl  repro_crash_minimal.tl  repro_double_free.tl  repro_escape_seq.tl  repro_generic_extern.tl  repro_generic_global_extern.tl  repro_generic_static.tl  repro_hashmap.tl  repro_impl_return.tl  repro_implicit_body.tl  repro_kv_crash.tl  repro_minimal.tl  repro_mixed_ranks.tl  repro_reshape_segfault.tl  repro_scalar_assign.tl  repro_segfault_minimal.tl  repro_string.tl  (+74 more)
vscode-tl/: language-configuration.json  package.json  tensor-logic-0.1.0.vsix
(+714 files in other folders)
