[package]
name = "tl-lang"
version = "0.3.9"
edition = "2024"
license = "MIT"
description = "A differentiable programming language with tensor support for machine learning"
repository = "https://github.com/JunSuzukiJapan/tl"
authors = ["Jun Suzuki"]
keywords = ["machine-learning", "deep-learning", "tensor", "differentiable", "language"]
categories = ["science", "compilers", "mathematics"]

[[bin]]
name = "tl"
path = "src/main.rs"

[workspace]
members = ["crates/tl_runtime", "crates/tl_metal", "crates/tl_backend", "crates/tl_cpu", "crates/tl_cuda"]

[dependencies]
tl_runtime = { path = "crates/tl_runtime", version = "0.3.9", default-features = false }
tl_cpu = { path = "crates/tl_cpu", version = "0.3.9" }

# CLI & Error Handling
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
ariadne = "0.4.1"


# Parser
nom = "7.1.3"

# Compiler / Backend (LLVM)
# Note: Ensure LLVM 18 or compatible version is installed on the system
inkwell = { version = "0.7.0", features = ["llvm18-1"] }

# Tensor Runtime (Candle)
candle-core = { version = "0.9.1" }

# Logging
log = "0.4"
env_logger = "0.11"
candle-nn = "0.9.1"
safetensors = "0.4.1"
candle-coreml = { version = "0.3.1", optional = true }

# Utils
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart", "native-tls", "http2"], default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
libc = "0.2.178"
image = "0.25"
candle-transformers = "0.9.1"
tokenizers = "0.22.2"
byteorder = "1.5"
rand = "0.8.5"
nom_locate = "4.1.0"
logos = "0.16.0"


[features]
default = []
metal = ["candle-core/metal", "tl_runtime/metal"]
cuda = ["tl_runtime/cuda"]
coreml = ["dep:candle-coreml"]

[profile.release]
opt-level = 3
codegen-units = 1

[dev-dependencies]
glob = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.3.1"
regex = "1.12.3"

