[package]
name = "tl_cuda"
version = "0.3.8"
edition = "2021"
description = "CUDA GPU tensor library for TL"
license = "MIT"
repository = "https://github.com/JunSuzukiJapan/tl"
authors = ["Jun Suzuki"]

[dependencies]
rand = "0.8"
tl_backend = { path = "../tl_backend", version = "0.3.8" }

[dev-dependencies]
serial_test = "3"
