[package]
name = "tl_metal"
version = "0.1.0"
edition = "2021"
description = "Metal GPU tensor library for TL"
license = "MIT"

[dependencies]
metal = "0.29"
objc = "0.2"
block = "0.1"
rand = "0.8"
tl_backend = { path = "../tl_backend" }

# MPS (Metal Performance Shaders) support
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-metal = "0.2"
objc2-metal-performance-shaders = "0.3"

[dev-dependencies]
serial_test = "3"

