[package]
name = "tl_runtime"
version = "0.3.7"
edition = "2024"
license = "MIT"
description = "Runtime library for TL differentiable programming language"
repository = "https://github.com/JunSuzukiJapan/tl"
authors = ["Jun Suzuki"]
keywords = ["machine-learning", "deep-learning", "tensor", "runtime"]
categories = ["science", "mathematics"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# GPU Backend (feature で切替)
tl_metal = { path = "../tl_metal", version = "0.3.7", optional = true }
tl_cuda = { path = "../tl_cuda", version = "0.3.7", optional = true }
tl_backend = { path = "../tl_backend", version = "0.3.7" }
tl_cpu = { path = "../tl_cpu", version = "0.3.7" }

# Tokenizer (for LLM support)
tokenizers = "0.19.1"
safetensors = "0.4.1"



# Utils
once_cell = "1.18.0"
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart", "native-tls", "http2"], default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
libc = "0.2.178"
image = "0.25"
byteorder = "1.5"
rand = "0.8.5"
log = "0.4"
gguf-rs = "0.1.5"
memmap2 = "0.9.9"
half = "2.7.1"

[features]
default = ["metal"]
metal = ["dep:tl_metal"]
cuda = ["dep:tl_cuda"]

[build-dependencies]
cc = "1.0"
